fixing css so username is visible in topbar

--- a/skins/rutgers/styles.css
+++ b/skins/rutgers/styles.css
@@ -553,6 +553,8 @@ a.iconlink.upload {
 
 #topline span.username {
 	padding-right: 1em;
+	color: #fff;
+	text-shadow: 0px 1px 1px black;
 }
 
 #topline .topleft a {
